--- a/Code/bm-webapp/src/main/webapp/listReports.vm
+++ b/Code/bm-webapp/src/main/webapp/listReports.vm
@@ -89,6 +89,12 @@
                           case "6":
                             $("#config-report-form").attr("action","./roiProyecto.do");
                             break;
+                          case "7":
+                            $("#config-report-form").attr("action","./roiTecnicas.do");
+                            break;
+                          case "8":
+                            $("#config-report-form").attr("action","./costoCalidad.do");
+                            break;
                           case "9":
                             $("#config-report-form").attr("action","./tecnicasDeteccion.do");
                             break;
@@ -206,8 +212,7 @@
                             $("#level").val("");
                             $("#level").attr("disabled", "true");
                         }
-                        else if ( $("#report").val() == "8"
-                        || $("#report").val() == "15" || $("#report").val() == "16") {
+                        else if ( $("#report").val() == "15" || $("#report").val() == "16") {
                             $("#level").empty();
                             for (key in level){
                                 $("#level").append('<option value="' + key + '">' + level[key] + '</option>');
@@ -259,7 +264,7 @@
                         }
                         else if ($("#report").val() == "6" || $("#report").val() == "9" || $("#report").val() == "10"
                         || $("#report").val() == "11" || $("#report").val() == "12" || $("#report").val() == "13"
-                        || $("#report").val() == "7") {
+                        || $("#report").val() == "7" || $("#report").val() == "8") {
                             $("#level").empty();
                             for (key in level2){
                                 $("#level").append('<option value="' + key + '">' + level2[key] + '</option>');
@@ -363,8 +368,7 @@
                             $("#level2").val("");
                             $("#level2").attr("disabled", "true");
                         }
-                        else if (this.value == "8"
-                        || this.value == "15" || this.value == "16") {
+                        else if (this.value == "15" || this.value == "16") {
                             $("#level").empty();
                             for (key in level){
                                 $("#level").append('<option value="' + key + '">' + level[key] + '</option>');
@@ -416,7 +420,7 @@
                         }
                         else if (this.value == "6" || this.value == "9" || this.value == "10"
                         || this.value == "11" || this.value == "12" || this.value == "13"
-                        || this.value == "7") {
+                        || this.value == "7" || this.value == "8") {
                             $("#level").empty();
                             for (key in level2){
                                 $("#level").append('<option value="' + key + '">' + level2[key] + '</option>');
