--- a/Code/bm-webapp/src/main/webapp/listReports.vm
+++ b/Code/bm-webapp/src/main/webapp/listReports.vm
@@ -81,7 +81,7 @@
                             $("#config-report-form").attr("action","./reportesGenerales.do");
                             break;
                           case "4":
-                            $("#config-report-form").attr("action","./reportesGenerales.do");
+                            $("#config-report-form").attr("action","./resumenGeneral.do");
                             break;                          
                           case "5":
                             $("#config-report-form").attr("action","./productividadCompuesta.do");
