Arreglo para nuevas tareas y modificar tareas, ahora incluye el tipo de tarea.

--- a/Code/bm-webapp/src/main/webapp/newTask.vm
+++ b/Code/bm-webapp/src/main/webapp/newTask.vm
@@ -71,6 +71,18 @@
                         </tr>
                         <tr>
                             <td>
+                                <label for ="taskType" id="taskTypeLabel">Tipo:</label>
+                            </td>
+                            <td>
+                                <select name="taskType" id="taskType" class="required">
+                                    #foreach($type in $taskTypes)
+                                    <option value="${type}">${type}</option>
+                                    #end
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
                                 <label for ="taskDescription" id="taskDescriptionLabel">Descripci&oacute;n:</label>
                             </td>
                             <td>
