--- a/Code/bm-webapp/src/main/webapp/viewTask.vm
+++ b/Code/bm-webapp/src/main/webapp/viewTask.vm
@@ -97,6 +97,22 @@
                         </tr>
                         <tr>
                             <td>
+                                <label for ="taskType" id="taskTypeLabel">Tipo:</label>
+                            </td>
+                            <td>
+                                <select name="taskType" id="taskType" class="required">
+                                    #foreach($type in $taskTypes)
+                                    #if($task.taskType == $type)
+                                    <option value="${type}" selected="selected">${type}</option>
+                                    #else
+                                    <option value="${type}">${type}</option>
+                                    #end
+                                    #end
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
                                 <label for ="taskDescription" id="taskDescriptionLabel">Descripci&oacute;n:</label>
                             </td>
                             <td>
