--- a/Code/bm-webapp/src/main/webapp/resumenGeneral.vm
+++ b/Code/bm-webapp/src/main/webapp/resumenGeneral.vm
@@ -51,7 +51,7 @@
                         <tr>
                             <th></th>
                             <th>Defectos</th>
-                            <th></th>
+                            <th>Defectos</th>
                             <th></th>
                             <th>Velocidad</th>
                             <th>Tiempo</th>
