--- a/Code/bm-webapp/src/main/webapp/viewTask.vm
+++ b/Code/bm-webapp/src/main/webapp/viewTask.vm
@@ -113,6 +113,22 @@
                         </tr>
                         <tr>
                             <td>
+                                <label for ="phase_id" id="phaseLabel">Fase:</label>
+                            </td>
+                            <td>
+                                <select name="phase_id" id="phase_id" class="required">
+                                    #foreach($phase in $phases)
+                                        #if($task.phase.phaseId == $phase.phaseID)
+                                        <option value="${phase.phaseID}" selected="selected">${phase.phaseName}</option>
+                                        #else
+                                        <option value="${phase.phaseID}">${phase.phaseName}</option>
+                                        #end
+                                    #end
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
                                 <label for ="taskDescription" id="taskDescriptionLabel">Descripci&oacute;n:</label>
                             </td>
                             <td>
