--- a/Code/bm-webapp/src/main/webapp/viewPhase.vm
+++ b/Code/bm-webapp/src/main/webapp/viewPhase.vm
@@ -78,214 +78,81 @@
             </div>
         </div>
         <div id="content"> <!--AQUI METER TODOS LOS INPUT, LABELS etc-->
-            <div id="task">
-                <form action="viewTask.do?project_id=${project_id}&task_id=${task_id}" method="POST" id="task-modify-form">
-                    <h3 id="form-title">Ver/Modificar Tarea</h3>
+            <div id="phase">
+                <form action="viewPhase.do?project_id=${project_id}&phase_id=${phase_id}" method="POST" id="phase-modify-form">
+                    <h3 id="form-title">Ver/Modificar Fase</h3>
                     <table id="task-modify">
                         <tr>
                             <td>
-                                <label for ="taskName" id="taskNameLabel">Nombre:</label>
+                                <label for ="phaseName" id="phaseNameLabel">Nombre:</label>
                             </td>
                             <td>
-                                #if($user.administrator && $task.status != "CANCELED")
-                                <input type="text" name="taskName" id="taskName" class="required" value="${task.taskName}"/>
+                                #if($user.permissions >= 20)
+                                <input type="text" name="phaseName" id="phaseName" class="required" value="${phase.phaseName}"/>
                                 #else
-				<span>${task.taskName}</span>
-				<input type="hidden" value="${task.taskName}" name="taskName" id="taskName"  />
+				<span>${phase.phaseName}</span>
+				<input type="hidden" value="${phase.phaseName}" name="phaseName" id="phaseName"  />
                                 #end
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <label for ="taskType" id="taskTypeLabel">Tipo:</label>
+                                <label for ="phaseDesc" id="phaseDescLabel">Descripci&oacute;n:</label>
                             </td>
                             <td>
-                                <select name="taskType" id="taskType" class="required">
-                                    #foreach($type in $taskTypes)
-                                    #if($task.taskType == $type)
-                                    <option value="${type}" selected="selected">${type}</option>
-                                    #else
-                                    <option value="${type}">${type}</option>
-                                    #end
-                                    #end
-                                </select>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label for ="taskDescription" id="taskDescriptionLabel">Descripci&oacute;n:</label>
-                            </td>
-                            <td>
-                                #if($user.administrator && $task.status != "CANCELED")
-                                <textarea cols="30" rows="6" name="taskDescription" id="taskDescription">${task.description}</textarea>
+                                #if($user.permissions >= 20)
+                                <textarea cols="30" rows="6" name="phaseDesc" id="phaseDesc">${phase.phaseDesc}</textarea>
                                 #else
 				<span>${task.description}</span>
-				<input type="hidden" value="${task.description}" name="taskDescription" id="taskDescription"  />
+				<input type="hidden" value="${phase.phaseDesc}" name="phaseDesc" id="phaseDesc"  />
                                 #end
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <label for ="assignedUser" id="assignedUserLabel">Responsable:</label>
+                                <label for ="phaseType" id="phaseTypeLabel">Tipo:</label>
                             </td>
                             <td>
-                                #if($user.administrator && $task.status != "CANCELED")
-                                <select name="assignedUser" id="assignedUser" class="required">
-                                    <option value="${task.assignedUser.userName}" selected="selected">${task.assignedUser.fullName}</option>
-                                    #foreach($u in $users)
-                                        #if($u.userName != $task.assignedUser.userName)
-                                        <option value="${u.userName}">${u.fullName}</option>
+                                #if($user.permissions >= 20)
+                                <select name="phaseType" id="phaseType" class="required">
+                                    <option value="${phase.phaseType}" selected="selected">${phase.phaseType}</option>
+                                    #foreach($type in $phaseTypes)
+                                        #if($type != $phase.phaseType)
+                                        <option value="${type}">${type}</option>
                                         #end
                                     #end
                                 </select>
                                 #else
-                                <select name="assignedUser" id="assignedUser" class="required">
-                                    <option value="${task.assignedUser.userName}" selected="selected">${task.assignedUser.fullName}</option>
-                                </select>
+                                <span>${phase.phaseType}</span>
+				<input type="hidden" value="${phase.phaseType}" name="phaseType" id="phaseType"  />
                                 #end
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <label for ="estimatedHours" id="estimatedHoursLabel">Esfuerzo Planeado:</label>
+                                <label for ="phaseOrder" id="phaseOrderLabel">Después de:</label>
                             </td>
                             <td>
-                                #if($user.administrator && $task.status != "CANCELED")
-                                <input type="text" name="estimatedHours" id="estimatedHours" class="required digits" value="${task.estimatedHours}"/>
-                                #else
-				<span>${task.estimatedHours} horas.</span>
-				<input type="hidden" value="${task.estimatedHours}" name="estimatedHours" id="estimatedHours"  />
-                                #end
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label for ="acumulatedHours" id="acumulatedHoursLabel">Esfuerzo Acumulado:</label>
-                            </td>
-                            <td>
-                                ${task.investedHours}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label for ="investedHours" id="investedHoursLabel">Agregar Esfuerzo:</label>
-                            </td>
-                            <td>
-                                #if($task.status != "COMPLETED"  && $task.status != "CANCELED")
-                                <input type="text" name="investedHours" id="investedHours" class="required digits" value="0"/>
-                                #else
-                                <input type="text" name="investedHours" id="investedHours" class="digits" value="0" readonly="readonly"/>
-                                #end
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label for ="ramainingHours" id="ramainingHoursLabel">Esfuerzo Restante:</label>
-                            </td>
-                            <td>
-                                #if($task.status != "COMPLETED"  && $task.status != "CANCELED")
-                                <input type="text" name="remainingHours" id="remainingHours" class="required digits" value="${task.remainingHours}"/>
-                                #else
-                                <input type="text" name="remainingHours" id="remainingHours" class="digits" value="${task.remainingHours}" readonly="readonly"/>
-                                #end
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label for ="status" id="statusLabel">Estatus:</label>
-                            </td>
-                            <td>
-                                #if($user.administrator && $task.status != "COMPLETED"  && $task.status != "CANCELED")
-                                <select name="status" id="status" class="required">
-                                    #if($task.status == "NOT_STARTED")
-                                    <option value="${task.status}" selected="selected">NO_INICIADA</option>
-                                    <option value="STARTED">INICIADA</option>
-                                    <option value="COMPLETED">COMPLETADA</option>
-                                    <option value="CANCELED">CANCELADA</option>
-                                    #elseif($task.status == "STARTED")
-                                    <option value="${task.status}" selected="selected">INICIADA</option>                                 
-                                    <option value="NOT_STARTED">NO_INICIADA</option>
-                                    <option value="COMPLETED">COMPLETADA</option>
-                                    <option value="CANCELED">CANCELADA</option>
+                                #if($user.permissions >= 20)
+                                <select name="phaseOrder" id="phaseOrder">
+                                    <option value="${phase.projectOrder}" selected="selected">NO CAMBIAR ORDEN</option>
+                                    <option value="1"></option>
+                                    #foreach($p in $phases)
+                                        #if($phase.projectOrder != $p.projectOrder)
+                                        <option value="${p.projectOrder}">${p.phaseName}</option>
+                                        #end
                                     #end
                                 </select>
-                                #elseif($task.status != "COMPLETED"  && $task.status != "CANCELED")
-                                <select name="status" id="status" class="required">
-                                    #if($task.status == "NOT_STARTED")
-                                    <option value="${task.status}" selected="selected">NO_INICIADA</option>
-                                    <option value="STARTED">INICIADA</option>
-                                    <option value="COMPLETED">COMPLETADA</option>
-                                    #elseif($task.status == "STARTED")
-                                    <option value="${task.status}" selected="selected">INICIADA</option>
-                                    <option value="COMPLETED">COMPLETADA</option>
-                                    #end
-                                </select>
-                                #elseif($task.status == "COMPLETED")
-                                COMPLETADA
-                                #elseif($task.status == "CANCELED")
-                                CANCELADA
-                                #end
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label for ="startDate" id="startDateLabel">Fecha de Inicio:</label>
-                            </td>
-                            <td>
-                                #if($user.administrator && $task.status != "CANCELED")
-                                <input type="text" name="startDate" id="startDate" class="required hasDatePicker" value="$dateShort.format($task.startDate)"/>
                                 #else
-				<span>$dateShort.format($task.startDate)</span>
-				<input type="hidden" value="$dateShort.format($task.startDate)" name="startDate" id="startDate"  />
+                                <span>${phase.projectOrder}</span>
+				<input type="hidden" value="${phase.projectOrder}" name="phaseOrder" id="phaseOrder"/>
                                 #end
                             </td>
                         </tr>
                         <tr>
+                            <td><a href="listPhases.do?project_id=${project_id}" id="cancel-link">Cancelar</a></td>
                             <td>
-                                <label for ="endDate" id="endDateLabel">Fecha de Fin:</label>
-                            </td>
-                            <td>
-                                #if($user.administrator && $task.status != "CANCELED")
-                                <input type="text" name="endDate" id="endDate" class="required hasDatePicker" value="$dateShort.format($task.endDate)"/>
-                                #else
-				<span>$dateShort.format($task.endDate)</span>
-				<input type="hidden" value="$dateShort.format($task.endDate)" name="endDate" id="endDate"  />
-                                #end
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label for ="taskCommentaries" id="taskCommentariesLabel">Comentarios:</label>
-                            </td>
-                            <td>
-                                #foreach($c in $comments)
-                                   <span class="task-comment">
-                                        Autor: ${c.author}<br/>
-                                        Fecha: $dateShort.format($c.date)<br/>
-                                        Comentario: ${c.text}<br/>
-                                        ---<br/>
-                                    </span>
-                                #end
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label for ="newComment" id="newCommentLabel">Agregar Comentario:</label>
-                            </td>
-                            <td>
-                                #if($task.status != "CANCELED")
-                                <textarea cols="30" rows="6" name="newComment" id="newComment"></textarea>
-                                #else
-                                <textarea cols="30" rows="6" name="newComment" id="newComment" readonly="readonly"></textarea>
-                                #end
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><a href="listTasks.do?project_id=${project_id}" id="cancel-link">Cancelar</a></td>
-                            <td>
-                                #if($user.administrator)
-                                <input type="image" value="Aceptar" src="images/Base/aceptar.png" id="accept-button" />
-                                #elseif(!$user.administrator && $task.status != "CANCELED")
+                                #if($user.permissions >= 20)
                                 <input type="image" value="Aceptar" src="images/Base/aceptar.png" id="accept-button" />
                                 #end
                             </td>
