--- a/Code/bm-webapp/src/main/webapp/modifyTemplate.vm
+++ b/Code/bm-webapp/src/main/webapp/modifyTemplate.vm
@@ -95,13 +95,21 @@
 							</td>
 						</tr>
                                                 <tr>
-							<td>
-								<label for ="text" id="templateReviewType">Tipo de revision:</label>
-							</td>
-							<td>
-								<input type="text" name="templateReviewType" id="templateReviewType" value="${t.templateReviewType}" class="required" />
-							</td>
-						</tr>
+                                                    <td>
+                                                        <label for ="templateReviewType" id="templateReviewTypeLabel">Tipo:</label>
+                                                    </td>
+                                                    <td>
+                                                        <select name="templateReviewType" id="templateReviewType" class="required">
+                                                            #foreach($type in $templateReviewTypes)
+                                                            #if($t.templateReviewType == $type)
+                                                            <option value="${type}" selected="selected">${type}</option>
+                                                            #else
+                                                            <option value="${type}">${type}</option>
+                                                            #end
+                                                            #end
+                                                        </select>
+                                                    </td>
+                                                </tr>
                                                 <tr>
 							<td>
 								<label for ="templatePublic" id="templatePublic">Plantilla publica:</label>
