--- a/Code/bm-webapp/src/main/webapp/newDefect.vm
+++ b/Code/bm-webapp/src/main/webapp/newDefect.vm
@@ -11,19 +11,15 @@
         <script type="text/javascript" src="./js/localization/messages_es.js"></script>
         <script type="text/javascript" src="./js/jquery-ui-1.8.5.custom.min.js"></script>
         <script type="text/javascript" src="./js/localization/jquery.ui.datepicker-es.js"></script>
-        <script>
+        <script type="text/javascript">
                 function goToUrl(url)
                 {
                         window.location = url;
                 }
 			
                 $(document).ready(function(){
-                        $("#task-add-form").validate({
-							rules: {
-								taskEstimatedHours: {
-									min:1
-								}
-							}
+                        $("#defect-add-form").validate({
+							
 						});
                 })				
         </script>
@@ -74,7 +70,7 @@
                                 <label for ="defectDescription" id="defectDescriptionLabel">Descripci&oacute;n:</label>
                             </td>
                             <td>
-                                <textarea cols="30" rows="6" name="defectDescription" id="defectDescription"></textarea>
+                                <textarea cols="30" rows="6" name="defectDescription" id="defectDescription" class="required"></textarea>
                             </td>
                         </tr>
                         <tr>
