--- a/Code/bm-webapp/src/main/webapp/newProject.vm
+++ b/Code/bm-webapp/src/main/webapp/newProject.vm
@@ -11,7 +11,7 @@
 		<script type="text/javascript" src="./js/localization/messages_es.js"></script>
 		<script type="text/javascript" src="./js/jquery-ui-1.8.5.custom.min.js"></script>
 		<script type="text/javascript" src="./js/localization/jquery.ui.datepicker-es.js"></script>
-		<script>
+		<script type="text/javascript">
 			function goToUrl(url)
 			{
 				window.location = url;
