--- a/Code/bm-webapp/src/main/webapp/viewDefect.vm
+++ b/Code/bm-webapp/src/main/webapp/viewDefect.vm
@@ -11,7 +11,7 @@
         <script type="text/javascript" src="./js/localization/messages_es.js"></script>
         <script type="text/javascript" src="./js/jquery-ui-1.8.5.custom.min.js"></script>
         <script type="text/javascript" src="./js/localization/jquery.ui.datepicker-es.js"></script>
-        <script>
+        <script type="text/javascript">
                 function goToUrl(url)
                 {
                         window.location = url;
@@ -95,10 +95,10 @@
                             </td>
                             <td>
                                 #if(($user.permissions >= 20 || $defect.assignedUser == $user.userName) && $defect.defectState != "CANCELED" && $defect.defectState != "FIXED")
-                                <textarea cols="30" rows="6" name="defectDesc" id="defectDesc">${defect.defectDesc}</textarea>
+                                <textarea cols="30" rows="6" name="defectDesc" id="defectDesc" class="required">${defect.defectDesc}</textarea>
                                 #else
 				<span>${defect.defectDesc}</span>
-				<input type="hidden" value="${defect.defectDesc}" name="defectDesc" id="defectDesc"  />
+				<input type="hidden" value="${defect.defectDesc}" name="defectDesc" id="defectDesc" class="required" />
                                 #end
                             </td>
                         </tr>
