--- a/Code/bm-webapp/src/main/webapp/viewTask.vm
+++ b/Code/bm-webapp/src/main/webapp/viewTask.vm
@@ -11,7 +11,7 @@
         <script type="text/javascript" src="./js/localization/messages_es.js"></script>
         <script type="text/javascript" src="./js/jquery-ui-1.8.5.custom.min.js"></script>
         <script type="text/javascript" src="./js/localization/jquery.ui.datepicker-es.js"></script>
-        <script>
+        <script type="text/javascript">
                 function goToUrl(url)
                 {
                         window.location = url;
@@ -44,6 +44,10 @@
                     else {
                       return false;
                     }
+                   }
+                   if (($("#remainingHours").val() > 0) && ($("#status").val() == "COMPLETED")) {
+                       alert("La tarea no puede modificarse a estatus COMPLETADA, ya que el esfuerzo restante es mayor a CERO.")
+                       return false;
                    }
                  });
                 });
@@ -133,10 +137,10 @@
                             </td>
                             <td>
                                 #if($user.administrator && $task.status != "CANCELED")
-                                <textarea cols="30" rows="6" name="taskDescription" id="taskDescription">${task.description}</textarea>
+                                <textarea cols="30" rows="6" name="taskDescription" id="taskDescription" class="required">${task.description}</textarea>
                                 #else
 				<span>${task.description}</span>
-				<input type="hidden" value="${task.description}" name="taskDescription" id="taskDescription"  />
+				<input type="hidden" value="${task.description}" name="taskDescription" id="taskDescription" class="required" />
                                 #end
                             </td>
                         </tr>
